Added student number

--- a/templates/main/index.html
+++ b/templates/main/index.html
@@ -5,8 +5,7 @@
 <h1 class="title">Lottery Web Application</h1>
 
 <h2 class="subtitle">CSC2031 Security & Programming Paradigms</h2>
-
-{#TODO: ADD NAME AND STUDENT NUMBER#}
-<p>Name ('Student Number')</p>
+    
+<p>Name ('210323199')</p>
 
 {% endblock %}
