Updated error messages in template

--- a/templates/500.html
+++ b/templates/500.html
@@ -7,7 +7,7 @@
 <body>
 {% extends "base.html" %}
 {% block content %}
-    <h2 class="title is-2">Internal Server Error</h2>
+    <h2 class="title is-2">Error 500: Internal Server Error</h2>
 {% endblock %}
 </body>
 </html>
