--- a/templates/400.html
+++ b/templates/400.html
@@ -7,7 +7,7 @@
 <body>
 {% extends "base.html" %}
 {% block content %}
-    <h2 class="title is-2">Bad Request</h2>
+    <h2 class="title is-2">Error 400: Bad Request</h2>
 {% endblock %}
 </body>
 </html>
