--- a/templates/404.html
+++ b/templates/404.html
@@ -7,7 +7,7 @@
 <body>
 {% extends "base.html" %}
 {% block content %}
-    <h2 class="title is-2">Not Found</h2>
+    <h2 class="title is-2">Error 404: Not Found</h2>
 {% endblock %}
 </body>
 </html>
