--- a/templates/503.html
+++ b/templates/503.html
@@ -7,7 +7,7 @@
 <body>
 {% extends "base.html" %}
 {% block content %}
-    <h2 class="title is-2">Service Unavailable</h2>
+    <h2 class="title is-2">Error 503: Service Unavailable</h2>
 {% endblock %}
 </body>
 </html>
