added jinja error for password

--- a/templates/users/login.html
+++ b/templates/users/login.html
@@ -25,6 +25,9 @@
         <div class="field">
             <div class="control">
                 {{ form.password(class="input", placeholder="Password") }}
+                {% for error in form.password.errors %}
+                     {{ error }}
+                 {% endfor %}
             </div>
         </div>
         <div>
