--- a/templates/users/login.html
+++ b/templates/users/login.html
@@ -30,6 +30,11 @@
                  {% endfor %}
             </div>
         </div>
+        <div class="field">
+            <div class="control">
+                {{ form.pin(class="input", placeholder="PIN") }}
+            </div>
+        </div>
         <div>
         {{ form.recaptcha }}
         </div>
