--- a/templates/base.html
+++ b/templates/base.html
@@ -47,11 +47,9 @@
                             <a href="{{ url_for('users.account') }}" class="navbar-item">
                                 Account
                             </a>
-                            {#TODO: LOGOUT#}
-                            <a href="" class="navbar-item">
-                                Logout
+                            <a href="{{ url_for('users.logout')}}" class="navbar-item">
+                                Log out
                             </a>
-
                        </div>
                     </div>
                 </div>
