--- a/templates/main/index.html
+++ b/templates/main/index.html
@@ -6,6 +6,6 @@
 
 <h2 class="subtitle">CSC2031 Security & Programming Paradigms</h2>
     
-<p>Name ('210323199')</p>
+<p>Sakai Newman ('210323199')</p>
 
 {% endblock %}
