Ensures lottery numbers submitted are of length 6 and value is between 1 and 60

--- a/templates/admin/admin.html
+++ b/templates/admin/admin.html
@@ -66,22 +66,22 @@
             <form method="POST" action="/create_winning_draw">
                 <div class="columns is-multiline is-centered">
                     <div class="column is-one-sixth">
-                        <input class="input" type="number" name="no1" id="no1" placeholder="value 1">
+                        <input class="input" type="number" name="no1" id="no1" placeholder="value 1" required min=1 max=60>
                     </div>
                     <div class="column is-one-sixth">
-                        <input class="input" type="number" name="no2" id="no2" placeholder="value 2">
+                        <input class="input" type="number" name="no2" id="no2" placeholder="value 2" required min=1 max=60>
                     </div>
                     <div class="column is-one-sixth">
-                        <input class="input" type="number" name="no3" id="no3" placeholder="value 3">
+                        <input class="input" type="number" name="no3" id="no3" placeholder="value 3" required min=1 max=60>
                     </div>
                     <div class="column is-one-sixth">
-                        <input class="input" type="number" name="no4" id="no4" placeholder="value 4">
+                        <input class="input" type="number" name="no4" id="no4" placeholder="value 4" required min=1 max=60>
                     </div>
                     <div class="column is-one-sixth">
-                        <input class="input" type="number" name="no5" id="no5" placeholder="value 5">
+                        <input class="input" type="number" name="no5" id="no5" placeholder="value 5" required min=1 max=60>
                     </div>
                     <div class="column is-one-sixth">
-                        <input class="input" type="number" name="no6" id="no6" placeholder="value 6">
+                        <input class="input" type="number" name="no6" id="no6" placeholder="value 6" required min=1 max=60>
                     </div>
                 </div>
                 <div class="field">
